SRP and DI improved

--- a/Blog/BlogApp/appsettings.Development.json
+++ b/Blog/BlogApp/appsettings.Development.json
@@ -7,6 +7,13 @@
   },
   "ConnectionStrings": {
     "database":"Data Source = blog.db",
-    "mysql":"server=127.0.0.1;port=3306;database=blog;user=root;password=yourpswd"
+    "mysql":"server=127.0.0.1;port=3306;database=yourdb;user=root;password=yourpswd"
+  },
+  "EmailSender":{
+    "Host":"",
+    "Port":0,
+    "EnableSSL":true,
+    "UserName":"",
+    "Password":""
   }
 }
